project_square_card: moved down card title (fix due to extra padding added).

--- a/static/sass/project_sheet/block/project_square_card.scss
+++ b/static/sass/project_sheet/block/project_square_card.scss
@@ -66,7 +66,7 @@ $topic-sprite-dimensions: true;
 	    font-weight: bold;
 	    line-height: $sizeTextBig * 1.2;
 
-	    bottom: 60px;
+	    bottom: 55px;
 	    margin-left: 10px;
 	    margin-right: 10px;
 	    color: black;
